--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ format_version: 4
 model_params:
   model_architecture: "resnet50"
 
-  history_num_frames: 2
+  history_num_frames: 0
   history_step_size: 1
   history_delta_time: 0.1
 
@@ -43,24 +43,16 @@ raster_params:
 ###################
 ## Data loader options
 train_data_loader:
-  datasets:
-    - key: "./sample.zarr/sample.zarr"
-      scene_indices:
-        - -1
-  perturb_probability: 0
+  key: "scenes/sample.zarr"
   batch_size: 12
   shuffle: True
-  num_workers: 8
+  num_workers: 16
 
 val_data_loader:
-  datasets:
-    - key: "./sample.zarr/sample.zarr"
-      scene_indices:
-        - -1
-  perturb_probability: 0
+  key: "scenes/sample.zarr"
   batch_size: 12
   shuffle: False
-  num_workers: 8
+  num_workers: 16
 
 ###################
 ## Train params
