--- a/config.yaml
+++ b/config.yaml
@@ -60,3 +60,10 @@ train_params:
   checkpoint_every_n_steps: 10000
   max_num_steps: 5
   eval_every_n_steps: 10000
+  visualize_interval: 50
+  extreme_k:
+    - 5
+    - 5
+  traj_stat_threshold: 3.
+  lr: 1e-4
+
