--- a/config.yaml
+++ b/config.yaml
@@ -42,18 +42,27 @@ raster_params:
 
 ###################
 ## Data loader options
-train_data_loader:
-  key: "scenes/sample.zarr"
+train_dataloader:
+  splits:
+    - key: "scenes/sample.zarr"
+      cache: !!float 15e9
   batch_size: 16
-  shuffle: True
+  shuffle: False
   num_workers: 16
 
-val_data_loader:
+val_dataloader:
   key: "scenes/sample.zarr"
   batch_size: 16
   shuffle: False
   num_workers: 16
 
+#test_dataloader:
+#  splits:
+#    - key: "scenes/sample.zarr"
+#      cache: !!float 15e9
+#  batch_size: 16
+#  shuffle: True
+#  num_workers: 16
 ###################
 ## Train params
 train_params:
