--- a/config.yaml
+++ b/config.yaml
@@ -38,30 +38,23 @@ raster_params:
   # one of the classes we care about (cars, bikes, peds, etc.), >=1.0 filter all other agents.
   filter_agents_threshold: 0.5
 
+  # whether to completely disable traffic light faces in the semantic rasterizer
+  disable_traffic_light_faces: False
+
 ###################
 ## Data loader options
 train_dataloader:
-  splits:
-    - key: "scenes/sample.zarr"
-      cache: !!float 15e9
+  split: "scenes/sample.zarr"
   batch_size: 16
-  shuffle: False
+  shuffle: True
   num_workers: 16
 
 val_dataloader:
-  key: "scenes/sample.zarr"
+  split: "scenes/sample.zarr"
   batch_size: 16
   shuffle: False
   num_workers: 16
 
-#test_dataloader:
-#  splits:
-#    - key: "scenes/sample.zarr"
-#      cache: !!float 15e9
-#  batch_size: 16
-#  shuffle: True
-#  num_workers: 16
-###################
 ## Train params
 train_params:
   checkpoint_every_n_steps: 10000
