--- a/config.yaml
+++ b/config.yaml
@@ -39,7 +39,7 @@ raster_params:
   filter_agents_threshold: 0.5
 
   # whether to completely disable traffic light faces in the semantic rasterizer
-  disable_traffic_light_faces: True
+  disable_traffic_light_faces: Falsee
 
 ###################
 ## Data loader options
